# jalapaquery

./: .gitattributes  .gitignore  BUGS  CONTRIBUTING.md  DatabaseProofOfConcept.md  DesignerProofOfConcept.md  DockWidgetProofOfConcept.md  INSTALL  Makefile.am  Makefile.in  OperationSystemsTest.md  PDFProofOfConcept.md  PluginProofOfConcept.md  ProjectHome.md  ProofOfConcepts.md  README  README.md  RichTextProofOfConcept.md  THANKS  TreeViewProofOfConcept.md  UndoManagementProofOfConcept.md  XmlProofOfConcept.md  aclocal.m4  autotroll.mk  ax_qt_main.cpp  ax_qt_test.h  compile  config.h.in  config.status  configure  configure.ac  configure.in  depcomp  index.html  jalapaquery.pro  libtool  missing  moc_ax_qt_test.cpp  params.json  sonar-project.properties  (+1 more)
debian/: changelog
doc/: Makefile.in  doc.pro
jalapaquery/: AUTHORS  ChangeLog  INSTALL  NEWS  aclocal.m4  config.h  config.h.in  config.status  configure.in  jalapaquery.pro
jalapaquery/debian/: copyright  rules
jalapaquery/quazip/: Makefile.am  Makefile.in
jalapaquery/src/: Makefile.am  src.pro
jalapaquery/src/jalapaquery/: App.rc  AppIcon.icns  AppInfo.plist  Makefile.in  PluginInterface.h  aboutdialog.h  aboutdialog.ui  appwindow.h  constants.cpp  constants.h  icons.qrc  jalapamodel.icns  jalapaquery.pro  jalapaquery_en.ts  jalapaquery_en_IE.ts  jalapaquery_ga.qm  jalapaquery_ga.ts  jalapaquery_pt.qm  jalapaquery_pt.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelinterface.h  newfiledialog.cpp  newfiledialog.h  newfiledialog.ui  plugindialog.cpp  plugindialog.ui  resources.qrc  testitem.cpp
jalapaquery/src/jalapaquery/interface/: modelinterface.h  plugininterface.h  typemodel.h
jalapaquery/src/plugins/: plugins.pro
jalapaquery/src/plugins/databaseplugin/: databaseplugin.cpp  databaseplugin.h  databaseplugin_global.h
jalapaquery/src/plugins/testplugin/: testplugin.cpp  testplugin.pro
jalapaquery/src/plugins/umlplugin/: Makefile.in  umlplugin.cpp  umlplugin.h  umlplugin.pro
jalapaquery/test/: Makefile.in
m4/: m4_ax_check_zlib.m4  m4_ax_have_qt.m4
quazip/: JlCompress.cpp  Makefile.am  Makefile.in  quazip.pc  quazip.pc.in  zip.c
src/: Makefile.in  src.pro
src/jalapaquery/: App.rc  AppInfo.plist  Makefile.am  Makefile.in  constants.cpp  constants.h  icons.qrc  jalapaquery.pro  jalapaquery_en.ts  jalapaquery_en_IE.ts  jalapaquery_ga.ts  jalapaquery_pt.qm  jalapaquery_pt.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_aboutdialog.cpp  moc_mainwindow.cpp  moc_newfiledialog.cpp  moc_plugindialog.cpp  newfiledialog.cpp  newfiledialog.h  newfiledialog.ui  plugindialog.cpp  plugindialog.h  plugindialog.ui  qrc_icons.cpp  qrc_resources.cpp  resources.qrc  testitem.cpp  testitem.h  ui_aboutdialog.h  ui_mainwindow.h  ui_newfiledialog.h  ui_plugindialog.h
src/jalapaquery/interface/: modelinterface.h  plugininterface.h  typemodel.h
src/plugins/: Makefile.in  plugins.pro
src/plugins/databaseplugin/: Makefile.in  databaseplugin.pro  moc_databaseplugin.cpp  qrc_resources.cpp
src/plugins/umlplugin/: Makefile.in  moc_umlplugin.cpp  umlplugin.h  umlplugin.pro
test/: Makefile.in  test.pro
trunk/ jalapaquery/db/: uuid
trunk/ jalapaquery/db/revprops/0/: 0
trunk/jalapaquery/: Makefile  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.in
trunk/jalapaquery/debian/: control
trunk/jalapaquery/doc/: Makefile.in
trunk/jalapaquery/quazip/: Makefile.am  Makefile.in  quazip.pro
trunk/jalapaquery/src/: Makefile.in
trunk/jalapaquery/src/jalapaquery/: AppInfo.plist  aboutdialog.cpp  aboutdialog.ui  appwindow.cpp  appwindow.h  dbmodel.icns  dialog.h  icons.qrc  jalapaquery.pro  jalapaquery_en.ts  jalapaquery_en_IE.ts  jalapaquery_ga.ts  jalapaquery_pt.qm  jalapaquery_pt.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelinterface.h  newfiledialog.cpp  newfiledialog.h  newfiledialog.ui  plugindialog.cpp  plugindialog.h  plugindialog.ui  resources.qrc  testinterface.h  testitem.h
trunk/jalapaquery/src/jalapaquery/interface/: plugininterface.h  typemodel.h
trunk/jalapaquery/src/plugins/: Makefile.am  Makefile.in
trunk/jalapaquery/src/plugins/databaseplugin/: Makefile.in  databaseplugin.cpp  databaseplugin.h  databaseplugin.pro  resources.qrc
trunk/jalapaquery/src/plugins/testplugin/: testplugin.h  testplugin.pro
trunk/jalapaquery/src/plugins/umlplugin/: Makefile.in  umlplugin.cpp  umlplugin.h  umlplugin.pro  umlplugin_global.h
trunk/jalapaquery/test/: test.pro
trunk/src/: src.pro
trunk/src/jalapadesign/: jalapadesign.pro
trunk/src/plugins/: plugins.pro
wiki/: DatabaseProofOfConcept.wiki  DesignerProofOfConcept.wiki  DockWidgetProofOfConcept.wiki  OperationSystemsTest.wiki  PDFProofOfConcept.wiki  PluginProofOfConcept.wiki  ProofOfConcepts.wiki  RichTextProofOfConcept.wiki  TreeViewProofOfConcept.wiki  UndoManagementProofOfConcept.wiki  XmlProofOfConcept.wiki
