m4_include([autotroll.m4])

AC_PREREQ(2.61)
AC_INIT([jalapaquery], [0.1], [leonhad@gmail.com])
AM_INIT_AUTOMAKE([foreign -Wall tar-ustar])
AC_CONFIG_SRCDIR([INSTALL])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_LN_S
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stddef.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_LIB([z], [gzread], , [AC_MSG_ERROR([zlib not found, see http://www.zlib.net])])
AT_WITH_QT

AC_CONFIG_FILES([Makefile
                 doc/Makefile
                 quazip/Makefile
                 src/Makefile
                 src/jalapaquery/Makefile
                 src/plugins/Makefile
                 src/plugins/databaseplugin/Makefile
                 src/plugins/umlplugin/Makefile
                 test/Makefile])
AC_OUTPUT
