lib_LIBRARIES = libquazip.a
libquazip_a_SOURCES = \
    zip.c \
    unzip.c \
    quazipnewinfo.cpp \
    quazipfile.cpp \
    quazip.cpp \
    quacrc32.cpp \
    quaadler32.cpp \
    JlCompress.cpp \
    ioapi.c

LIBS += -lz

libquazip_adir = quazip

libquazip_a_HEADERS = \
    zip.h \
    unzip.h \
    quazipnewinfo.h \
    quazipfileinfo.h \
    quazipfile.h \
    quazip.h \
    quacrc32.h \
    quachecksum32.h \
    quaadler32.h \
    JlCompress.h \
    ioapi.h \
    crypt.h
